--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -10,7 +10,7 @@
   %body{:class => page_classes}
     %nav.navbar.navbar-default.navbar-fixed-top{role: "navigation"}
       .container
-        %a.navbar-brand.logo{href: "#"}
+        %a.navbar-brand.logo{href: "index.html"}
         .nav-menu.pull-right
           %ul.nav.navbar-nav.navbar-right
             %li
