--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -10,7 +10,7 @@
 					We are a design company in Boulder, CO.
 					%br 
 					We offer web development & design services.
-				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"#"}
+				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"#work"}
 					See Our Work
 			.col-md-4.col-sm-4
 				%img.full-width{:src=>"images/wire.png"}
@@ -47,3 +47,4 @@
 							Develop
 						%p
 							Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
+= partial "layouts/work_menu"
