--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -1,30 +1,16 @@
 %nav.menu-drop
-  %a.text-center{:href=>"#"}  
+  %a.text-center{:href=>"wli.html"}  
     %section
       .container
         .row
           .com-md-12
             %h1
               Wealth Legacy Institute
-  %a.text-center{:href=>"#"}  
+  %a.text-center{:href=>"outflow.html"}  
     %section
       .container
         .row
           .com-md-12
             %h1
               Outflow
-  %a.text-center{:href=>"#"}  
-    %section
-      .container
-        .row
-          .com-md-12
-            %h1
-              mianzi bike co
-  %a.text-center{:href=>"#"}  
-    %section
-      .container
-        .row
-          .com-md-12
-            %h1
-              Homelessness Prevention Initiative
           
