--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -48,3 +48,4 @@
 						%p
 							Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
 = partial "layouts/work_menu"
+= partial "layouts/dribbble"
