--- a/source/menu/outflow.html.haml
+++ b/source/menu/outflow.html.haml
@@ -7,6 +7,6 @@
 					%h1.double-margin-bottom
 						Outflow
 					%img.full-width.double-margin-bottom{:src=>"images/outflow_teaser.png"}
-					%a.btn.btn-lg.btn-default.btn-invert.double-margin-bottom{:href=>"wli.html"}
+					%a.btn.btn-lg.btn-default.btn-invert.double-margin-bottom{:href=>"outflow.html"}
 						View The Case Study
 			.col-md-2
