--- a/source/outflow.html.haml
+++ b/source/outflow.html.haml
@@ -67,7 +67,7 @@
 						Giving Back
 					%h3
 						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
-					%a.btn.btn-xl.btn-default.triple-margin-bottom{:target=>"blank",:href=>"http://www.wealthlegacyinstitute.com", :style=>"border-color:#f33a2c; color:#f33a2c;"}
+					%a.btn.btn-xl.btn-default.triple-margin-bottom{:target=>"blank",:href=>"http://www.outflow.org", :style=>"border-color:#f33a2c; color:#f33a2c;"}
 						View the site
 			.col-md-2
 		.row
