--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -13,4 +13,11 @@
           .com-md-12
             %h1
               Outflow
+  %a.text-center{:href=>"mianzi.html"}  
+    %section
+      .container
+        .row
+          .com-md-12
+            %h1
+              mianzi bike co
           
