--- a/source/outflow.html.haml
+++ b/source/outflow.html.haml
@@ -4,7 +4,7 @@
 			.col-md-12
 				.margin-bottom
 					.text-center
-						%h2
+						%h1
 							Every city tells a story.
 						%h3
 							Helping a leadership firm tell theirs
@@ -65,7 +65,7 @@
 				.text-center
 					%h2
 						Giving Back
-					%h3
+					%h3.triple-margin-bottom
 						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
 					%a.btn.btn-xl.btn-default.triple-margin-bottom{:target=>"blank",:href=>"http://www.outflow.org", :style=>"border-color:#f33a2c; color:#f33a2c;"}
 						View the site
