--- a/source/wli.html.haml
+++ b/source/wli.html.haml
@@ -4,7 +4,7 @@
 			.col-md-12
 				.margin-bottom
 					.text-center
-						%h2
+						%h1
 							Clarity, Confidence & Peace of Mind
 						%h3
 							The new voice of an independent wealth management firm.
@@ -78,7 +78,7 @@
 					Advice to go
 				%p.double-margin-bottom
 					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat 
-				%a.btn.btn-xl.btn-default.margin-bottom{:target=>"blank",:href=>"http://www.wealthlegacyinstitute.com", :style=>"border-color:#cbb778; color:#cbb778;"}
+				%a.btn.btn-xl.btn-default.double-margin-bottom{:target=>"blank",:href=>"http://www.wealthlegacyinstitute.com", :style=>"border-color:#cbb778; color:#cbb778;"}
 					View the site
 			.col-md-1.col-sm-1
 			.col-md-4.col-sm-4
