--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -20,4 +20,11 @@
           .com-md-12
             %h1
               mianzi bike co
+  %a.text-center{:href=>"chronotrack.html"}  
+    %section
+      .container
+        .row
+          .com-md-12
+            %h1
+              Chronotrack Live
           
