--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -27,4 +27,11 @@
           .com-md-12
             %h1
               Chronotrack Live
+  %a.text-center{:href=>"ucps.html"}  
+    %section
+      .container
+        .row
+          .com-md-12
+            %h1
+              Union Colony Preperatory School
           
