--- a/source/mianzi.html.haml
+++ b/source/mianzi.html.haml
@@ -36,7 +36,7 @@
 			.col-md-10
 				%img.full-width.triple-margin-bottom.triple-margin-top{:src=>"images/mianzi_logos.png"}
 			.col-md-1
-%section
+%section.no-padding-bottom
 	.container
 		.row
 			.col-md-2
@@ -52,7 +52,7 @@
 			.col-md-8
 				%img.full-width.triple-margin-top{:src=>"images/mianzi_logo.png"}
 			.col-md-2
-%section.no-padding-bottom{:style=>"background:url(images/mianzi_bike.jpg) bottom center no-repeat;padding-top:370px;"}
+%section.no-padding-bottom{:style=>"background:url(images/mianzi_bike.jpg) bottom center no-repeat;padding-top:270px;"}
 	.container
 		.row
 			.col-md-4
