--- a/source/ucps.html.haml
+++ b/source/ucps.html.haml
@@ -1,6 +1,6 @@
 %section.invert-section.bg-cover{:style=>"background:url(images/ucps_bg.jpg) repeat-x #0055a5;"}
 	.container
-		.row.margin-bottom
+		.row.triple-margin-bottom
 			.col-md-12
 				.margin-bottom
 					.text-center
@@ -105,3 +105,5 @@
 		.row
 			.col-lg-12
 				%img.full-width{:src=>"images/ucps_ipad_full.jpg"}
+				%blockquote.text-center{style:"color:#0055a5;"}
+					"We love it!"
