--- a/source/chronotrack.html.haml
+++ b/source/chronotrack.html.haml
@@ -71,10 +71,10 @@
 %section.invert-section{:style=>"background:#fc9b4e;"}
 	.container
 		.row
-			.col-md-5
-				%img.full-width{:src=>"images/chronotrack_tag_large.png"}
-			.col-md-1
-			.col-md-6
+			.col-md-5.col-sm-5
+				%img.max-width.double-margin-bottom{:src=>"images/chronotrack_tag_large.png"}
+			.col-md-1.col-sm-1
+			.col-md-6.col-sm-6
 				%img.margin-bottom{:src=>"images/chronotrack_knife.png"}
 				%div
 					%h2
