--- a/source/wli.html.haml
+++ b/source/wli.html.haml
@@ -84,7 +84,7 @@
 			.col-md-4.col-sm-4
 				%img.full-width.margin-bottom{:src=>"images/wli_phone.jpg"}
 			.col-md-1.col-sm-1
-%section.invert-section{:style=>"background-color:#302b29;"}
+%section.invert-section{:style=>"background-color:#cbb778;"}
 	.container
 		.row
 			.col-md-2
