--- a/source/mianzi.html.haml
+++ b/source/mianzi.html.haml
@@ -36,7 +36,7 @@
 			.col-md-10
 				%img.full-width.triple-margin-bottom.triple-margin-top{:src=>"images/mianzi_logos.png"}
 			.col-md-1
-%section.no-padding-bottom
+%section
 	.container
 		.row
 			.col-md-2
@@ -48,10 +48,10 @@
 						Mauris erat orci, gravida at tortor eu, dictum congue quam.
 			.col-md-2
 		.row
-			.col-md-2
-			.col-md-8
+			.col-md-3
+			.col-md-6
 				%img.full-width.triple-margin-top{:src=>"images/mianzi_logo.png"}
-			.col-md-2
+			.col-md-3
 %section.no-padding-bottom{:style=>"background:url(images/mianzi_bike.jpg) bottom center no-repeat;padding-top:270px;"}
 	.container
 		.row
