--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -13,7 +13,7 @@
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom{:href=>"#work"}
 					See Our Work
 			.col-md-4.col-sm-4
-				%img.full-width{:src=>"images/wire.png"}
+				%img.max-width{:src=>"images/wire.png"}
 %section
 	.container
 		.row.double-margin-bottom
