--- a/source/ucps.html.haml
+++ b/source/ucps.html.haml
@@ -1,4 +1,4 @@
-%section.invert-section.bg-cover{:style=>"background:url(images/ucps_bg.jpg) repeat-x #0055a5;"}
+%section{:style=>"background-color:#f2f2f2;"}
 	.container
 		.row.triple-margin-bottom
 			.col-md-12
@@ -8,6 +8,12 @@
 							One School To Rule Them All
 						%h3
 							Giving back to my high school.
+						.row
+							.col-lg-2
+							.col-lg-8
+								%img.full-width.no-margin-bottom.margin-top{:src=>"images/ucps_screen.png"}
+							.col-lg-2
+						.divider
 		.row
 			.col-md-8.col-sm-8
 				%h4
@@ -65,7 +71,7 @@
 					.col-md-6.col-sm-6
 						.row
 							.col-md-3.col-sm-3
-								%img.full-width.margin-bottom{:src=>"images/ucps_pencil.jpg"}
+								%img.max-width.margin-bottom{:src=>"images/ucps_pencil.jpg"}
 							.col-md-9.col-sm-9
 								%h3
 									Custom CMS
@@ -74,7 +80,7 @@
 					.col-md-6.col-sm-6
 						.row.margin-bottom
 							.col-md-3.col-sm-3
-								%img.full-width.margin-bottom{:src=>"images/ucps_paper.jpg"}
+								%img.max-width.margin-bottom{:src=>"images/ucps_paper.jpg"}
 							.col-md-9.col-sm-9
 								%h3
 									Custom CMS
@@ -84,7 +90,7 @@
 					.col-md-6.col-sm-6
 						.row
 							.col-md-3.col-sm-3
-								%img.full-width.margin-bottom{:src=>"images/ucps_clock.jpg"}
+								%img.max-width.margin-bottom{:src=>"images/ucps_clock.jpg"}
 							.col-md-9.col-sm-9
 								%h3
 									Custom CMS
@@ -93,7 +99,7 @@
 					.col-md-6.col-sm-6
 						.row
 							.col-md-3.col-sm-3
-								%img.full-width.margin-bottom{:src=>"images/ucps_cloud.jpg"}
+								%img.max-width.margin-bottom{:src=>"images/ucps_cloud.jpg"}
 							.col-md-9.col-sm-9
 								%h3
 									Custom CMS
