--- a/source/chronotrack.html.haml
+++ b/source/chronotrack.html.haml
@@ -9,7 +9,7 @@
 							%br
 							Everything
 						%h3
-							Designing the face of a bike company
+							A new look for a trusted company
 						.divider
 		.row
 			.col-md-8.col-sm-8
@@ -72,7 +72,7 @@
 	.container
 		.row
 			.col-md-5.col-sm-5
-				%img.max-width.double-margin-bottom{:src=>"images/chronotrack_tag_large.png"}
+				%img.max-width.double-margin-bottom.pull-right.margin-top{:src=>"images/chronotrack_tag_large.png"}
 			.col-md-1.col-sm-1
 			.col-md-6.col-sm-6
 				%img.margin-bottom{:src=>"images/chronotrack_knife.png"}
