--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -1,4 +1,34 @@
 %nav.menu-drop
+  .container.double-padding-top.double-padding-bottom
+    .row
+      .col-lg-3
+      .col-lg-6
+        %ul.inline.text-center.no-padding-left.double-margin-bottom
+          %li.text-center
+            %a{:href=>"/"} 
+              Home
+          %li.text-center
+            •
+          %li.text-center
+            %a{:href=>"#"} 
+              About Us
+          %li.text-center
+            •
+          %li.text-center
+            %a{:href=>"#"} 
+              Contact
+        .divider
+      .col-lg-3
+  .container.padding-top.padding-bottom
+    .row
+      .col-lg-1
+      .col-lg-10
+        %p.text-center.header
+          CASE STUDIES
+        %p.text-center
+          A collection of some of our very favorite work from past clients.
+      .col-lg-1
+
   %a.text-center{:href=>"wli.html"}  
     %section
       .container
@@ -34,4 +64,26 @@
           .com-md-12
             %h1
               Union Colony Preperatory School
+  .container.double-margin-top
+    .row
+      .col-lg-3
+      .col-lg-6
+        .divider
+      .col-lg-3
+  .container.double-padding-top.double-padding-bottom
+    .row
+      .col-lg-3
+      .col-lg-6
+        %ul.inline.text-center.no-padding-left.double-margin-bottom.social-menu
+          %li.text-center
+            %a{:href=>"#"} 
+              %i.icon-dribbble
+          %li.text-center
+            %a{:href=>"#"} 
+              %i.icon-twitter
+          %li.text-center
+            %a{:href=>"#"} 
+              %i.icon-github
+      .col-lg-3
+
           
