--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -536,6 +536,7 @@ a.logo{
 //drop-menu
 
 nav.menu-drop{
+box-shadow:inset 0 2px 8px rgba(0,0,0,.2);
 position: fixed;
 opacity: 0;
 z-index: 800;
@@ -544,6 +545,7 @@ width: 100%;
 @include transform(translate(0, -127%));
 margin-top: -1px;
 background-color: #fafafa;
+@include linear-gradient(top, #2fb451 0%,#85c695 100%);
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center center;
@@ -553,22 +555,48 @@ background-position: center center;
 transition: transform 0.5s, opacity 0 0.6s;
 overflow-y: scroll;
 padding:0 $baseline $baseline*3 $baseline;
+p{
+  color:white;
+  &.header{
+    font-family:$extra-bold-font-name;
+    font-size:.9em;
+  }
+}
+ul{
+  text-align:center!important;
+  display:block!important;
+  li{
+    display:inline-block;
+    color:white;
+  }
+  &.social-menu{
+    li{
+      font-size:2em;
+    }
+  }
+}
   a{
+    text-align:center;
+    font-family:$extra-bold-font-name;
+    font-size:1.2em;
+    color:rgba(255,255,255,.8);
     h1{
       @include transition-duration(.3s);
-      color:$primary-color;
-      font-family:$light-font-name;
+      color:rgba(255,255,255,.8);
+      font-family:$extra-bold-font-name;
       margin:0;
+      font-size:2.5em;
     }
     &:hover{
+      color:white;
       h1{
-        color:shade($primary-color,50%);
+        color:white;
 
       }
     }
   }
   section{
-    padding:$baseline*2 0;
+    padding:$baseline/2 0;
   }
 }
 
@@ -699,6 +727,9 @@ footer{
   padding:$baseline*2 0;
   p,a{
     color:white;
+    &:hover{
+      color:white;
+    }
   }
 }
 
