--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -5,7 +5,7 @@
       .col-lg-6
         %ul.inline.text-center.no-padding-left.double-margin-bottom
           %li.text-center
-            %a{:href=>"/"} 
+            %a{:href=>"index.html"} 
               Home
           %li.text-center
             •
@@ -64,6 +64,13 @@
           .com-md-12
             %h1
               Union Colony Preperatory School
+  %a.text-center{:href=>"logos.html"}  
+    %section
+      .container
+        .row
+          .com-md-12
+            %h1
+              Select Logos
   .container.double-margin-top
     .row
       .col-lg-3
