--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -585,7 +585,7 @@ ul{
       color:rgba(255,255,255,.8);
       font-family:$extra-bold-font-name;
       margin:0;
-      font-size:2.5em;
+      font-size:2em;
     }
     &:hover{
       color:white;
@@ -596,7 +596,7 @@ ul{
     }
   }
   section{
-    padding:$baseline/2 0;
+    padding:$baseline/4 0;
   }
 }
 
@@ -741,4 +741,14 @@ footer{
     font-size:3em;
     line-height:$baseline*2;
   }
+
+
+  nav.menu-drop{
+    section{
+      padding:$baseline 0;
+      border-top:1px solid rgba(255,255,255,.2);
+    }
+  }
+
+
 }
