--- a/source/layouts/_footer.html.haml
+++ b/source/layouts/_footer.html.haml
@@ -2,10 +2,10 @@
 	.container
 		.row
 			.col-lg-6
-				%p.no-margin-bottom
+				%p.no-margin-bottom.pull-left
 					© 2013 Eternal Contrast info@eternalcontrast.com +1.970.396.3943 
 			.col-lg-6
-				%p.no-margin-bottom.text-right
+				%p.no-margin-bottom.text-right.pull-right
 					%a{href:"mailto:alauderdale@mac.com"}
 						%i.icon-envelope.half-margin-right
 						Let's Chat
