--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -19,58 +19,64 @@
               Contact
         .divider
       .col-lg-3
-  .container.padding-top.padding-bottom
+  .container
     .row
-      .col-lg-1
-      .col-lg-10
-        %p.text-center.header
-          CASE STUDIES
-        %p.text-center
-          A collection of some of our very favorite work from past clients.
-      .col-lg-1
-
+      %p.text-center.bold-font-name
+        CASE STUDIES
   %a.text-center{:href=>"wli.html"}  
     %section
       .container
         .row
           .com-md-12
-            %h1
+            %h1.no-margin-bottom
               Wealth Legacy Institute
+            %p
+              Branding, Web Design, Style Guide, UX
   %a.text-center{:href=>"outflow.html"}  
     %section
       .container
         .row
           .com-md-12
-            %h1
+            %h1.no-margin-bottom
               Outflow
+            %p
+              Branding, Web Design, UX
   %a.text-center{:href=>"mianzi.html"}  
     %section
       .container
         .row
-          .com-md-12
+          .com-md-12.no-margin-bottom
             %h1
               mianzi bike co
+            %p
+              Custom Logotype
   %a.text-center{:href=>"chronotrack.html"}  
     %section
       .container
         .row
           .com-md-12
-            %h1
+            %h1.no-margin-bottom
               Chronotrack Live
+            %p
+              Web Design
   %a.text-center{:href=>"ucps.html"}  
     %section
       .container
         .row
           .com-md-12
-            %h1
+            %h1.no-margin-bottom
               Union Colony Preperatory School
+            %p
+              Web Design, UX
   %a.text-center{:href=>"logos.html"}  
     %section
       .container
         .row
           .com-md-12
-            %h1
+            %h1.no-margin-bottom
               Select Logos
+            %p
+              Branding
   .container.double-margin-top
     .row
       .col-lg-3
