--- a/source/wli.html.haml
+++ b/source/wli.html.haml
@@ -13,14 +13,16 @@
 		.row
 			.col-md-8.col-sm-8
 				%h4
-					About the project
+					About The Client
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis. 
+					Wealth Legacy Institute is a nationally recognized independent wealth management firm committed to helping costumers live the life they imagine and leave the legacy they envision.
+				%p
+					They offer an integrated, principle-centered, values-based approach to wealth management, because life is more than financial statements, estate tax tables and “running the numbers.”
 			.col-md-4.col-sm-4
 				%h4
-					Our Role
+					My Role
 				%p
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+					I was hired by WLI to re-imagine their brand. We worked to slim down their website and let loose a fresh look. In addition, we developed a global design language, resulting in an updated brand that appealed to modern times, while staying true to the company’s roots. 
 %section
 	.container
 		.row
@@ -29,8 +31,8 @@
 				.text-center
 					%h2
 						A Fresh Start
-					%h3
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+					%p
+						We developed an approach aimed to tone down the meat of the site to a few digestible pages. Because we didn’t want to loose the content we removed, we built a blog system, and staged the content for future articles. This allowed WLI to keep their blog from getting stale.
 			.col-md-2
 		.row
 			.col-md-1
@@ -46,7 +48,7 @@
 					%h2
 						Simplicity is Simple.
 					%h3.triple-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci.
+						Our design approach explored an open, approachable layout anchored by a professional and confidant palette. 
 			.col-md-2
 		.row
 			.col-md-1
@@ -62,7 +64,7 @@
 					%h2
 						A Quick Overview
 					%h3.triple-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+						Because we stripped out so much. We were able to give each page a refined look and feel. We allowed viewers to connect with the story of the company quickly and easily.
 			.col-md-2
 		.row
 			.col-md-1
@@ -77,7 +79,7 @@
 				%h2
 					Advice to go
 				%p.double-margin-bottom
-					Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat 
+					We designed the site to be responsive down to mobile. We wanted new visitors and loyal blog readers to have a tailored experience wherever they were.
 				%a.btn.btn-xl.btn-default.double-margin-bottom{:target=>"blank",:href=>"http://www.wealthlegacyinstitute.com", :style=>"border-color:#cbb778; color:#cbb778;"}
 					View the site
 			.col-md-1.col-sm-1
@@ -93,7 +95,7 @@
 					%h2
 						For Print
 					%h3.triple-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
+						We took the fresh baked design language and translated it into print documentation. Then we developed a style guide for future use.
 			.col-md-2
 		.row
 			.col-md-1
@@ -108,8 +110,6 @@
 				.text-center
 					%blockquote{:style=>"color:#cbb778;"}
 						"We Found Our Voice"
-					%h3.triple-margin-bottom
-						Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat.
 			.col-md-2
 		.row
 			.col-md-1
