--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,9 +23,9 @@
 					%br
 					From the Rest
 				%h3.double-margin-bottom
-					We are a design company in Boulder, CO.
+					Welcome to the design portfolio of Alex Lauderdale.
 					%br 
-					We offer web development & design services.
+					I offer web development & design services.
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"#work"}
 					See The Work
 			.col-md-4.col-sm-4
@@ -39,7 +39,7 @@
 					%h2
 						Imagine a better web.
 					%h3
-						We love the internet! We specialize in web and mobile design. If you need, we can build things to. 
+						I love the internet! I specialize in web and mobile design. If you need, I can build things to. 
 			.col-md-1.col-sm-1
 		.row
 			.col-md-4.col-sm-4
