--- a/source/chronotrack.html.haml
+++ b/source/chronotrack.html.haml
@@ -36,7 +36,8 @@
 		.row
 			.col-md-1
 			.col-md-10
-				%img.full-width.triple-margin-top{:src=>"images/chronotrack_blueprint.jpg"}
+				.text-center
+					%img.max-width.triple-margin-top{:src=>"images/chronotrack_blueprint.jpg"}
 			.col-md-1
 %section.invert-section.no-padding-bottom{:style=>"background:#001527 url(images/chronotrack_logo_bg.png) top center no-repeat;"}
 	.container
