--- a/source/layouts/_footer.html.haml
+++ b/source/layouts/_footer.html.haml
@@ -3,7 +3,7 @@
 		.row
 			.col-lg-6
 				%p.no-margin-bottom.pull-left
-					© 2013 Eternal Contrast info@eternalcontrast.com +1.970.396.3943 
+					© 2013 Eternal Contrast +1.970.396.3943 
 			.col-lg-6
 				%p.no-margin-bottom.text-right.pull-right
 					%a{href:"mailto:alauderdale@mac.com"}
