--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -10,12 +10,12 @@
           %li.text-center
             •
           %li.text-center
-            %a{:href=>"#"} 
-              About Us
+            %a{:href=>"about.html"} 
+              About Me
           %li.text-center
             •
           %li.text-center
-            %a{:href=>"#"} 
+            %a{:href=>"mailto:alauderdale@mac.com"} 
               Contact
         .divider
       .col-lg-3
