--- a/source/layouts/dribbble.html.haml
+++ b/source/layouts/dribbble.html.haml
@@ -9,7 +9,7 @@
 		.row
 			.col-md-12.col-sm-12
 				%h3
-					Below is some of our recent work from Dribbble. Feel free to click an image to see more..
+					Below is some of our recent work from Dribbble.
 %section.no-padding-top.no-padding-bottom
 	#dribbble-portfolio
 
