--- a/source/outflow.html.haml
+++ b/source/outflow.html.haml
@@ -11,7 +11,7 @@
 						.row
 							.col-md-1
 							.col-md-10
-								%img.full-width.margin-bottom{:src=>"images/outflow_teaser.png"}
+								%img.max-width.margin-bottom{:src=>"images/outflow_teaser.png"}
 							.col-md-1
 						.divider
 		.row
@@ -39,7 +39,7 @@
 		.row
 			.col-md-1
 			.col-md-10
-				%img.full-width.margin-bottom{:src=>"images/outflow_quote.jpg"}
+				%img.max-width.margin-bottom{:src=>"images/outflow_quote.jpg"}
 			.col-md-1
 %section.invert-section{:style=>"background-color:#f33a2c;"}
 	.container
@@ -55,7 +55,7 @@
 		.row
 			.col-md-1
 			.col-md-10
-				%img.full-width.margin-bottom{:src=>"images/outflow_site.jpg"}
+				%img.max-width.margin-bottom{:src=>"images/outflow_site.jpg"}
 			.col-md-1
 %section
 	.container
@@ -73,7 +73,7 @@
 		.row
 			.col-md-1
 			.col-md-10
-				%img.full-width.margin-bottom{:src=>"images/outflow_mobile.jpg"}
+				%img.max-width.margin-bottom{:src=>"images/outflow_mobile.jpg"}
 			.col-md-1
 
 
