--- a/source/ucps.html.haml
+++ b/source/ucps.html.haml
@@ -11,7 +11,7 @@
 						.row
 							.col-lg-2
 							.col-lg-8
-								%img.full-width.no-margin-bottom.margin-top{:src=>"images/ucps_screen.png"}
+								%img.max-width.no-margin-bottom.margin-top{:src=>"images/ucps_screen.png"}
 							.col-lg-2
 						.divider
 		.row
@@ -39,7 +39,8 @@
 		.row
 			.col-md-4
 			.col-md-4
-				%img.full-width.triple-margin-bottom.triple-margin-top{:src=>"images/ucps_logo.jpg"}
+				.text-center
+					%img.max-width.triple-margin-bottom.triple-margin-top{:src=>"images/ucps_logo.jpg"}
 			.col-md-4
 %section.invert-section.no-padding-bottom{:style=>"background:#0055a5;"}
 	.container
