--- a/source/wli.html.haml
+++ b/source/wli.html.haml
@@ -8,7 +8,7 @@
 							Clarity, Confidence & Peace of Mind
 						%h3
 							The new voice of an independent wealth management firm.
-						%img.full-width.margin-bottom{:src=>"images/wli_trees.jpeg"}
+						%img.max-width.margin-bottom{:src=>"images/wli_trees.jpeg"}
 						.divider
 		.row
 			.col-md-8.col-sm-8
@@ -37,7 +37,7 @@
 		.row
 			.col-md-1
 			.col-md-10
-				%img.full-width.margin-bottom{:src=>"images/wli_sheets.jpg"}
+				%img.max-width.margin-bottom{:src=>"images/wli_sheets.jpg"}
 			.col-md-1
 %section.invert-section{:style=>"background-color:#cbb778;"}
 	.container
@@ -53,7 +53,7 @@
 		.row
 			.col-md-1
 			.col-md-10
-				%img.full-width.margin-bottom{:src=>"images/wli_site.jpg"}
+				%img.max-width.margin-bottom{:src=>"images/wli_site.jpg"}
 			.col-md-1
 %section
 	.container
