--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -756,6 +756,11 @@ footer{
       padding:$baseline 0;
       border-top:1px solid rgba(255,255,255,.2);
     }
+    ul{
+      li{
+        font-size:.8em;
+      }
+    }
   }
 
 
