--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -7,7 +7,7 @@
 				%h1
 					Me
 				%h3.double-margin-bottom
-					I’m 26, I live in colorfull Colorado and I love to make beautiful things. I've been designing and building the web for 4 years.
+					I’m 26, I live in colorfull Colorado and I love to make beautiful things. I've been designing and building the web for a living for 4 years.
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"#work"}
 					See One of My Favorite Projects
 %section
@@ -25,3 +25,9 @@
 			.col-md-12
 				.text-center
 					%img.max-width.triple-margin-top{:src=>"images/about_graphic.jpg"}
+%section
+	.container
+		.row
+			.col-md-12
+				%blockquote.primary-text-color.text-center{:style=>"background-color:#464646;"}
+					“Design is not the narrow application of formal skills, it is a way of thinking.”
