--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -7,7 +7,9 @@
 				%h1
 					Me
 				%h3.double-margin-bottom
-					I’m 26, I live in colorfull Colorado and I love to make beautiful things. I've been designing and building the web for a living for 4 years.
+					I’m 26, I live in colorfull Colorado and I love to make beautiful things. I've been designing and building the web full time for 
+					%strong
+						4 years.
 				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"#work"}
 					See One of My Favorite Projects
 %section
