--- a/source/chronotrack.html.haml
+++ b/source/chronotrack.html.haml
@@ -73,10 +73,10 @@
 	.container
 		.row
 			.col-md-5.col-sm-5
-				%img.max-width.double-margin-bottom.pull-right.margin-top{:src=>"images/chronotrack_tag_large.png"}
+				%img.max-width.double-margin-bottom.pull-right{:src=>"images/chronotrack_tag_large.png"}
 			.col-md-1.col-sm-1
 			.col-md-6.col-sm-6
-				%img.margin-bottom{:src=>"images/chronotrack_knife.png"}
+				/ %img.margin-bottom{:src=>"images/chronotrack_knife.png"}
 				%div
 					%h2
 						Cutting Edge Technology
