--- a/source/wli.html.haml
+++ b/source/wli.html.haml
@@ -15,14 +15,13 @@
 				%h4
 					About The Client
 				%p
-					Wealth Legacy Institute is a nationally recognized independent wealth management firm committed to helping costumers live the life they imagine and leave the legacy they envision.
-				%p
-					They offer an integrated, principle-centered, values-based approach to wealth management, because life is more than financial statements, estate tax tables and “running the numbers.”
+					Wealth Legacy Institute is a nationally recognized independent wealth management firm in Denver, CO.
+					They offer an integrated, principle-centered, values-based approach to wealth management. WLI is commited to helping clients reach their financial goals.
 			.col-md-4.col-sm-4
 				%h4
 					My Role
 				%p
-					I was hired by WLI to re-imagine their brand. We worked to slim down their website and let loose a fresh look. In addition, we developed a global design language, resulting in an updated brand that appealed to modern times, while staying true to the company’s roots. 
+					I was hired by WLI to re-imagine their brand. We worked to slim down their website and let loose a fresh look. In addition, we developed a global design language, resulting in an updated brand that appeals to modern times, while staying true to the company’s roots. 
 %section
 	.container
 		.row
@@ -32,7 +31,7 @@
 					%h2
 						A Fresh Start
 					%p
-						We developed an approach aimed to tone down the meat of the site to a few digestible pages. Because we didn’t want to loose the content we removed, we built a blog system, and staged the content for future articles. This allowed WLI to keep their blog from getting stale.
+						We developed an approach aimed to tone down the meat of the site to a few digestible pages. We built a blog system, and staged the content we removed for future articles. This allowed WLI to keep their blog from getting stale.
 			.col-md-2
 		.row
 			.col-md-1
@@ -64,7 +63,7 @@
 					%h2
 						A Quick Overview
 					%h3.triple-margin-bottom
-						Because we stripped out so much. We were able to give each page a refined look and feel. We allowed viewers to connect with the story of the company quickly and easily.
+						Because we stripped out so much. We were able to give each page a refined look and feel. We allowed viewers to quickly connect with the story of the company.
 			.col-md-2
 		.row
 			.col-md-1
@@ -79,7 +78,7 @@
 				%h2
 					Advice to go
 				%p.double-margin-bottom
-					We designed the site to be responsive down to mobile. We wanted new visitors and loyal blog readers to have a tailored experience wherever they were.
+					We designed the site to be responsive down to mobile. We wanted new visitors, and loyal blog readers to have a tailored experience wherever they were.
 				%a.btn.btn-xl.btn-default.double-margin-bottom{:target=>"blank",:href=>"http://www.wealthlegacyinstitute.com", :style=>"border-color:#cbb778; color:#cbb778;"}
 					View the site
 			.col-md-1.col-sm-1
@@ -95,7 +94,7 @@
 					%h2
 						For Print
 					%h3.triple-margin-bottom
-						We took the fresh baked design language and translated it into print documentation. Then we developed a style guide for future use.
+						We took evolved our new design language into print documentation. Then, we developed a style guide for future use.
 			.col-md-2
 		.row
 			.col-md-1
