--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -18,7 +18,7 @@
 	.container
 		.row
 			.col-md-8.col-sm-8
-				%h1
+				%h1.text-uppercase
 					Strikingly Different
 					%br
 					From the Rest
@@ -44,25 +44,25 @@
 		.row
 			.col-md-4.col-sm-4
 				.padded
+					%img.double-margin-bottom.home-icon{:src=>"images/design_icon.png"}
+						%h4
+							Branding
+						%p
+							A good brand tells a story. Let's work together to communicate yours. After gathering information about your brand.I work closely with you to bring your vision to life. 
+			.col-md-4.col-sm-4
+				.padded
 					%img.double-margin-bottom.home-icon{:src=>"images/ux_icon.png"}
 						%h4
 							UX
 						%p
-							Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
-			.col-md-4.col-sm-4
-				.padded
-					%img.double-margin-bottom.home-icon{:src=>"images/design_icon.png"}
-						%h4
-							Design
-						%p
-							Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
+							Behind every great idea is a problem to solve. It is my mission to provide elegant UI solutions, so your idea can shine as simply and beautifully as possible. 
 			.col-md-4.col-sm-4
 				.padded
 					%img.double-margin-bottom.home-icon{:src=>"images/dev_icon.png"}
 						%h4
 							Develop
 						%p
-							Mauris erat orci, gravida at tortor eu, dictum congue quam. Aliquam feugiat quam ac dolor feugiat, non pharetra metus auctor. Pellentesque venenatis 
+							My skills don't end in photoshop. I can build your website and custom fit it with a CMS designed specifically for your needs. If your project requires more horsepower than I can provide. I know someone who can.
 #work
 	= partial "layouts/work_menu"
 = partial "layouts/dribbble"
