--- a/source/layouts/_main_menu.html.haml
+++ b/source/layouts/_main_menu.html.haml
@@ -23,6 +23,15 @@
     .row
       %p.text-center.bold-font-name
         CASE STUDIES
+  %a.text-center{:href=>"makeena.html"}  
+    %section
+      .container
+        .row
+          .com-md-12
+            %h1.no-margin-bottom
+              makeena
+            %p
+              Branding, Web Design, Style Guide, UX
   %a.text-center{:href=>"wli.html"}  
     %section
       .container
