--- a/source/layouts/dribbble.html.haml
+++ b/source/layouts/dribbble.html.haml
@@ -5,11 +5,13 @@
 			.col-md-7.col-sm-7
 				.margin-bottom
 					%h1
-						Here's What Were Up to Today
+						Here's What I'm Up to Today 
 		.row
 			.col-md-12.col-sm-12
 				%h3
-					Below is some of our recent work from Dribbble.
+					Below is some of my recent work from Dribbble.
+					%a{:href=>"http://dribbble.com/Alauderdale10"}
+						Visit me there
 %section.no-padding-top.no-padding-bottom
 	#dribbble-portfolio
 
