--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -7,10 +7,10 @@
 				%h1
 					Me
 				%h3.double-margin-bottom
-					I’m 26, I live in colorfull Colorado and I love to make beautiful things. I've been designing and building the web full time for 
+					I’m 26, I live in colorfull Colorado. I love to make beautiful things. I've been designing and building the web full time for 
 					%strong
 						4 years.
-				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"#work"}
+				%a.btn.btn-xl.btn-default.btn-invert.double-margin-bottom#see{:href=>"makeena.html"}
 					See One of My Favorite Projects
 %section
 	.container
@@ -21,7 +21,7 @@
 					%h2
 						I Solve Products
 					%h3.triple-margin-bottom.no-margin-bottom
-						While I love making things look nice, I also like making them work. I believe in a systematic design approach. I build systems with rhyme and reason.  
+						While I love making things look nice, I also like making them work. I believe in a systematic design approach. Your product deserves more than a pretty face. Let's build a something with rhyme and reason.  
 			.col-md-2
 		.row
 			.col-md-12
@@ -33,3 +33,4 @@
 			.col-md-12
 				%blockquote.primary-text-color.text-center{:style=>"background-color:#464646;"}
 					“Design is not the narrow application of formal skills, it is a way of thinking.”
+= partial "layouts/dribbble"
