--- a/source/makeena.html.haml
+++ b/source/makeena.html.haml
@@ -49,7 +49,7 @@
 					%h2
 						A Lasting Impression.
 					%h3
-						The mark was designed to work with all facets of the brand. The tone set by the logo was expanded into a custom icon set. 
+						The mark was designed to work with all facets of the brand. The tone set by the logo was expanded into an icon language. 
 	.col-md-2
 %section
 	.container
@@ -91,7 +91,7 @@
 					%h2
 						The App
 					%h3
-						The app was designed to be approachable and fun, appealing to all age groups. We kept the design light so the brands could shine. Never to be overwhelmed by the brand of makeena itself.
+						The app was designed to be approachable and fun, appealing to all age groups. We kept the design light, so the brands could shine. Never to be overwhelmed by the brand of makeena itself.
 			.col-md-2
 		.row
 			.col-md-12
