--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -19,7 +19,9 @@
 		.row
 			.col-md-8.col-sm-8
 				%h1.text-uppercase
-					Strikingly Different
+					Strikingly 
+					%span{:style=>"color:#fcc563;"}
+						Different
 					%br
 					From the Rest
 				%h3.double-margin-bottom
@@ -37,7 +39,7 @@
 			.col-md-10.col-sm-10
 				.text-center
 					%h2
-						Imagine a better web.
+						Dream to build a better web.
 					%h3
 						I love the internet! I specialize in web and mobile design. If you need, I can build things to. 
 			.col-md-1.col-sm-1
@@ -48,21 +50,21 @@
 						%h4
 							Branding
 						%p
-							A good brand tells a story. Let's work together to communicate yours. After gathering information about your brand.I work closely with you to bring your vision to life. 
+							Behing every brand is a story to tell. What's yours? I look forward to helping you bring your brand to life. 
 			.col-md-4.col-sm-4
 				.padded
 					%img.double-margin-bottom.home-icon{:src=>"images/ux_icon.png"}
 						%h4
 							UX
 						%p
-							Behind every great idea is a problem to solve. It is my mission to provide elegant UI solutions, so your idea can shine as simply and beautifully as possible. 
+							With 4 years of real world UX expierence, I have solved a lot. Let's make your idea shine as simply and beautifully as possible. 
 			.col-md-4.col-sm-4
 				.padded
 					%img.double-margin-bottom.home-icon{:src=>"images/dev_icon.png"}
 						%h4
 							Develop
 						%p
-							My skills don't end in photoshop. I can build your website and custom fit it with a CMS designed specifically for your needs. If your project requires more horsepower than I can provide. I know someone who can.
+							My skills don't end in photoshop. I can build your website and custom fit it with a CMS designed specifically for your needs.
 #work
 	= partial "layouts/work_menu"
 = partial "layouts/dribbble"
