--- a/source/layouts/dribbble.html.haml
+++ b/source/layouts/dribbble.html.haml
@@ -5,7 +5,7 @@
 			.col-md-7.col-sm-7
 				.margin-bottom
 					%h1
-						Here's What I'm Up to Today 
+						Here's What I'm Up to Now 
 		.row
 			.col-md-12.col-sm-12
 				%h3
