--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -160,7 +160,7 @@ h5,h6{
 }
 
 p  {font-size: 1em; line-height:$baseline*1.1;}
-h1 { font-size: 4.5em; line-height:$baseline*3.5;}
+h1 { font-size: 5.5em; line-height:$baseline*3.5;}
 h2 { font-size: 2.5em; line-height:$baseline*1.5;}
 h3 { font-size: 1.5em; line-height:$baseline*1.2;}
 h4 { font-size: 1.4em; line-height:$baseline;}
@@ -495,13 +495,14 @@ ul.inline{
 
 a{
   color:$primary-color;
-  text-decoration:underline;
+  &:hover{
+    text-decoration:none;
+  }
 }
 
 //buttons
 
 .btn{
-  text-decoration:none;
   font-family:$extra-bold-font-name;
   @include transition-duration(.3s);
   font-size:1.2em;
